# SketchBasedShapeRetrieval

./: CMakeLists.txt  Retriever.cpp  Retriever.h  SketchRenderer.cpp  SketchRenderer.h  hardCodeFunctions.h  main.cpp  sketch_test.prototxt  sketch_train_test.prototxt  utils.h
Siamese/: SketchRetrievalUI.py  inference.ipynb  inference.py  sketch_solver.prototxt  sketch_test_img.prototxt  train_sketch.sh
